--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <button id="reason-btn">¡Dime una razón más!</button>
     <script src="js/stars.js"></script>
     <script src="js/reasons.js"></script>
+    <p class="dedicado">Esta página fue hecha con mucho por Andrés Fábregas.</p>
   </body>
 </html>
