--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <button id="reason-btn">¡Dime una razón más!</button>
     <script src="js/stars.js"></script>
     <script src="js/reasons.js"></script>
-    <p class="dedicado">Esta página fue hecha con mucho por Andrés Fábregas.</p>
+    
+    <footer>
+    <p>Esta página fue hecha con mucho amor por Andrés Fábregas</p>
+    </footer>
+    
   </body>
 </html>
